avoid disrupted user CLASSPATH and ext.dirs
git-svn-id: https://formic.svn.sourceforge.net/svnroot/formic/trunk@314 1a7380c6-1923-0410-bcea-c2eae4ba7d6c